# historical-pvc

./: analyze.py  pyproject.toml  requirements.txt
plots/: results.csv  results_by_group.csv
plots/aggregate/all/: all_results.csv
plots/borda/: results.csv
plots/irv/: results.csv
plots/plurality/: results.csv
plots/schulze/: results.csv
plots/veto/: results.csv
src/: analyze.py  analyze_by_regime.py  analyze_by_voting_rule.py  compute_voting_results.py  plot_nm_scatter.py  plot_regime_scatter.py  plot_voting_results.py
